<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!--
  XML for screen providing ability to enter text, send some intents,
  switch to gesture activity and test scroll down action.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/send_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="sendData"
            android:text="@string/send_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/send_data_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/send_hint" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendData"
            android:text="@string/button_send" />

        <EditText
            android:id="@+id/enter_data_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_hint" />

        <TextView
            android:id="@+id/enter_data_response_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send_intent_to_call"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/send_data_to_call_edit_text"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/send_hint_for_call" />

        <Button
            android:id="@+id/send_to_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendDataToCall"
            android:text="@string/button_call" />

        <TextView
            android:id="@+id/send_data_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send_message"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/send_data_to_message_edit_text"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/send_hint"
            android:text="@string/send_data_to_message_edit_text" />

        <Button
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendMessage"
            android:text="@string/button_to_message" />

        <TextView
            android:id="@+id/goto_browser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send_intent_to_browser"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/send_data_to_browser_edit_text"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/send_hint" />

        <Button
            android:id="@+id/send_to_browser_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendDataToBrowser"
            android:text="@string/button_to_browser" />

        <TextView
            android:id="@+id/pick_contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pick_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/pick_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="pickContact"
            android:text="@string/button_pick" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send_intent_to_market"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/send_to_market_data"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/send_hint_to_market" />

        <Button
            android:id="@+id/send_to_market_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="clickToMarket"
            android:text="@string/button_market" />

        <EditText
            android:id="@+id/search_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="search box"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <TextView
            android:id="@+id/search_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/weird_text_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Delegating Edit Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <android.support.test.testapp.DelegatingEditText
            android:id="@+id/delegating_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/gesture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gesture_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/go_to_gesture_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="clickToGesture"
            android:text="@string/button_gesture" />

        <Button
            android:id="@+id/scroll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="clickToScroll"
            android:text="@string/launch_scroll_activity" />

        <Button
            android:id="@+id/list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="clickToList"
            android:text="@string/launch_list_activity" />

        <Button
            android:id="@+id/make_alert_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="showDialog"
            android:text="@string/make_alert_dialog_button" />

        <Button
            android:id="@+id/make_popup_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="showPopupMenu"
            android:text="@string/make_popup_menu_button" />

        <Button
            android:id="@+id/make_popup_view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="showPopupView"
            android:text="@string/make_popup_view_button" />

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:completionThreshold="1"
            android:hint="@string/pick_water"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spanned"
            android:layout_gravity="center_horizontal"
            android:text="@string/textWithLinks"
            android:autoLink = "web" />
        <!-- Keep this on bottom to test scrolling to views that are not showing. -->
        <!-- Huge top margin to guarantee this being out of view on large screen layout. -->

        <Button
            android:id="@+id/bottom_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1000dp"
            android:onClick="sendData"
            android:text="@string/button_send_bottom" />

        <TextView
            android:id="@+id/bottom_send_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1000dp"
            android:clickable="true"
            android:onClick="sendData"
            android:text="@string/send_title" />
    </LinearLayout>

</ScrollView>
